# hipdf

./: .cargoignore  Cargo.toml  README.md  build.rs  package.json  test_wasm.sh
.cargo/: config.toml
.claude/: settings.local.json
examples/: basic_usage.rs  example_embed_pdf.rs  example_fonts.rs  example_images.rs  example_ocg.rs
src/: blocks.rs  embed_pdf.rs  fonts.rs  images.rs  lib.rs  ocg.rs
tests/: blocks_integration_test.rs  embed_pdf_integration_test.rs  fonts_integration_test.rs  hatching_integration_test.rs  images_integration_test.rs  ocg_integration_test.rs
