[package]
name = "hipdf"
version = "0.0.0-development"
edition = "2021"
authors = ["Jorge Soares <jorge@ducflair.com>"]
description = "A high-level PDF manipulation library built on lopdf"
license = "MIT"
repository = "https://github.com/ducflair/hipdf"
keywords = ["pdf", "lopdf", "layers", "ocg", "manipulation"]
categories = ["multimedia", "api-bindings"]
readme = "README.md"
exclude = [
    "tests/outputs/", 
    "tests/assets/",
    "node_modules/**/*",
]

[lib]
name = "hipdf"
path = "src/lib.rs"

[dependencies]
jpeg-decoder = "0.3.2"
lopdf = "0.38.0"
miniz_oxide = "0.8.9"
png = "0.18.0"

[dev-dependencies]

[features]
default = []

# Test configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
