[package]
name = "hipdf"
version = "0.0.0-development"
edition = "2021"
authors = ["Jorge Soares <jorge@ducflair.com>"]
description = "A high-level PDF manipulation library built on lopdf"
license = "MIT"
repository = "https://github.com/ducflair/hipdf"
keywords = ["pdf", "lopdf", "layers", "ocg", "manipulation"]
categories = ["multimedia", "api-bindings"]
readme = "README.md"
exclude = [
    "tests/outputs/", 
    "tests/assets/",
    "node_modules/**/*",
]

[lib]
name = "hipdf"
path = "src/lib.rs"

[dependencies]
jpeg-decoder = "0.3.2"
lopdf = { version = "0.38.0", default-features = false }
miniz_oxide = "0.8.9"
png = "0.18.0"

# WASM support - automatically enabled when targeting wasm32-unknown-unknown
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
png = { version = "0.18.0", features = ["unstable"] }
wasm-bindgen-test = "0.3"

[features]
default = ["native"]
# Enable WASM support for lopdf when targeting WASM
wasm_js = ["lopdf/wasm_js"]
# Default features for non-WASM targets
native = ["lopdf/default"]

# Test configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
