[package]
name = "hipdf"
version = "0.0.0-development"
edition = "2021"
authors = ["Jorge Soares <jorge@ducflair.com>"]
description = "A high-level PDF manipulation library built on lopdf"
license = "MIT"
repository = "https://github.com/ducflair/hipdf"
keywords = ["pdf", "lopdf", "layers", "ocg", "manipulation"]
categories = ["multimedia", "api-bindings"]
readme = "README.md"
exclude = [
    "tests/outputs/", 
    "tests/assets/",
    "node_modules/**/*",
]

[lib]
name = "hipdf"
path = "src/lib.rs"

[dependencies]
jpeg-decoder = "0.3.2"
miniz_oxide = "0.8.9"
png = "0.18.0"
ttf-parser = { version = "0.20", features = ["variable-fonts"] }

# Target-specific configuration to ensure correct behavior without consumer-side feature flags
# For non-WASM targets, use lopdf with its default native features
[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
lopdf = { version = "0.38.0" }

# For wasm32-unknown-unknown, enable lopdf's wasm_js mode and getrandom's wasm_js support
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
lopdf = { version = "0.38.0", default-features = false, features = ["wasm_js"] }

[dev-dependencies]
png = { version = "0.18.0", features = ["unstable"] }
wasm-bindgen-test = "0.3"

[features]
# No feature flags are required by consumers; behavior is selected automatically by target.
# These are kept empty for backward compatibility so enabling them has no effect.
default = []
wasm_js = []
native = []

# Test configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
